# themartonator

./: .clang-format  .gitignore  README.md
src/: CMakeLists.txt
src/libmartonator/: CMakeLists.txt
src/themartonator/: CMakeLists.txt
src/themartonator/src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
